--- a/containers.yml
+++ b/containers.yml
@@ -24,17 +24,15 @@
       - "/dev/kmsg"
     restart: unless-stopped
 
-  mysqld-exporter:
+  mysql-exporter:
     image: prom/mysqld-exporter
-    container_name: mysqld-exporter
-    ports:
-      - "9104:9104"  # Expose port 9104 for Prometheus to scrape metrics
+    command:
+     - --config.my-cnf=/cfg/.my.cnf
+     - --mysqld.address=192.168.18.226:3306
     volumes:
-      - /home/user/user_my.cnf:/.my.cnf  # Mount the MySQL credentials file
-    networks:
-      cluster:
-        ipv4_address: 192.168.0.7
-    restart: unless-stopped
+      - ./config.my-cnf:/cfg/.my.cnf
+    ports:
+      - 9104:9104
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
@@ -53,3 +51,23 @@
     networks:
       cluster:
         ipv4_address: 192.168.0.9
+
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: unless-stopped
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    expose:
+      - 9100
+    networks:
+      cluster:
+        ipv4_address: 192.168.0.12
