--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,9 +1,12 @@
 scrape_configs:
-  # - job_name: 'node-exporter'
-  #  scrape_interval: 10s
-  #  static_configs:
-  #    - targets: ['node-exporter:9100']
   - job_name: 'cadvisor'
     scrape_interval: 5s
     static_configs:
       - targets: ['cadvisor:8080']
+  - job_name: 'mysql'
+    #    params:
+    #  auth_module: [client]
+    scrape_interval: 5s
+
+    static_configs:
+      - targets: ['mysql-exporter:9104']
