Add sysbench and optimizacion de rendmiento

--- a/compose.yml
+++ b/compose.yml
@@ -84,7 +84,7 @@ services:
     container_name: mysql1
       #entrypoint:
       #- "mysql -u root -pnicolas db < /sql_script.sql"
-    command: mysqld
+    command: mysqld --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: nicolas
       MYSQL_DATABASE: db
@@ -94,7 +94,51 @@ services:
     volumes:
       - ./mysql/sql_script.sql:/docker-entrypoint-initdb.d/sql_script.sql
       - ./mysql/privileges.sql:/docker-entrypoint-initdb.d/privileges.sql
+      - ./mysql/my.cnf/my.cnf:/etc/mysql/conf.d/my.cnf
 
+  sb-prepare:
+    image: severalnines/sysbench
+    container_name: sb-prepare
+    networks:
+      cluster:
+        ipv4_address: 192.168.0.15
+    command: >
+      sysbench
+      --db-driver=mysql
+      --oltp-table-size=1000
+      --oltp-tables-count=24
+      --threads=1
+      --mysql-host=192.168.0.10
+      --mysql-port=3306
+      --mysql-user=root
+      --mysql-password=nicolas
+      /usr/share/sysbench/tests/include/oltp_legacy/parallel_prepare.lua run
+    depends_on:
+      - mysql1
+
+  sb-run:
+    image: severalnines/sysbench
+    container_name: sb-run
+    networks:
+      cluster:
+        ipv4_address: 192.168.0.16
+    command: >
+      sysbench
+      --db-driver=mysql
+      --report-interval=2
+      --mysql-table-engine=innodb
+      --oltp-table-size=1000
+      --oltp-tables-count=24
+      --threads=64
+      --time=99999
+      --mysql-host=192.168.0.10
+      --mysql-port=3306
+      --mysql-user=root
+      --mysql-password=nicolas
+      /usr/share/sysbench/tests/include/oltp_legacy/oltp.lua run
+    depends_on:
+      - mysql1
+      - sb-prepare
 
 networks:
   cluster:
